# aura-lang

./: .gitignore  APK_EMULATOR_COMPLETE_GUIDE.md  APK_SYSTEM_COMPLETE_REPORT.md  AURA_APK_IMPLEMENTATION_SUMMARY.txt  CAPABILITY_ENFORCEMENT_COMPLETE.md  Cargo.toml  ECOSYSTEM_INTEGRATION_COMPLETE.md  INDEX_APK_SYSTEM.md  LICENSE  PHASE_3_COMPLETION_REPORT.md  PHASE_3_START_GUIDE.md  PHASE_4_MASTER_TASKLIST.md  PROJECT_STATUS_DASHBOARD.md  README.md  README_APK_EMULATOR.md  ROADMAP.md  SENTINEL_ENHANCEMENT_SUMMARY.md  SESSION_COMPLETE.md  WEEK_3_QUICK_REFERENCE.md  aura-deploy.py  aura.toml  aura_sentinel_demo.aura  aura_sentinel_overflow.aura  aura_type_growth_0_3.aura  build-all.ps1  build_android_apk.py  build_complete_with_apk.py  build_output.txt  build_release.py  cyberstyle_demo.aura  dashboard.aura  demo.h  linear_types_tests.aura  main.aura  onnx_demo.aura  sentinel_final.aura  setup_gradle_and_build_apk.py  verify-aura-apk.py
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  ci-gate.yml  ci.yml  differential_test.yml
Package.toml/test-project/: Package.toml
apps/shop_list_gui/: README.md  main.py  storage.py
aura/: .gitignore  Cargo.toml
aura-ai-opt/: Cargo.toml
aura-ai-opt/src/: lib.rs  main.rs
aura-ast/: Cargo.toml
aura-ast/src/: lib.rs
aura-backend-c/: Cargo.toml
aura-backend-c/src/: emit.rs  lib.rs
aura-backend-llvm/: Cargo.toml  build.rs
aura-backend-llvm/src/: codegen.rs  debugger.rs  lib.rs  llvm_target_init_shim.rs  pattern_lowering.rs
aura-bridge/: Cargo.toml
aura-bridge/src/: lib.rs  onnx.rs
aura-core/: Cargo.toml
aura-core/src/: capability.rs  capability_diagnostics.rs  capability_enforcement.rs  capability_validator.rs  control_flow.rs  diagnostics.rs  error.rs  explanation_engine.rs  function_signature.rs  lib.rs  lower.rs  move_tracking.rs  net_verifier.rs  ownership_enforcement.rs  race_detector.rs  sema.rs  types.rs  verifier.rs
aura-core/tests/: generics.rs  linear_call_moves.rs  linear_capabilities.rs  match_ctor_lowering.rs  match_exhaustiveness.rs  ownership_state_tracking.rs
aura-interpret/: Cargo.toml
aura-interpret/src/: debug.rs  lib.rs  main.rs  vm.rs
aura-ir/: Cargo.toml
aura-ir/src/: debug.rs  ir.rs  lib.rs  opt.rs  oracle.rs
aura-lex/: Cargo.toml
aura-lex/src/: lexer.rs  lib.rs  token.rs
aura-lsp/: COMPLETION_SUMMARY.txt  Cargo.toml  README_CI_GATE.md
aura-lsp/scripts/: run_differential_tests.sh
aura-lsp/src/: ci_gate.rs  ci_gate_driver.rs  counterexample_lsp.rs  differential_test_runner.rs  gdb_mi_protocol.rs  lib.rs  linear_type_debugger.rs  lldb_mi_protocol.rs  lsp_ci_gate_integration.rs  main.rs  merkle_cache.rs  performance_cache.rs  performance_tuning.rs  profiling.rs  proof_result_extractor.rs  telemetry_collector.rs
aura-lsp/tests/: ci_gate_tests.rs  config.json  lsp_smoke.rs
aura-lsp/tests/programs/: pointer_test.c  simple_add.c  string_test.c
aura-nexus/: Cargo.toml
aura-nexus/src/: lib.rs
aura-parse/: Cargo.toml
aura-parse/src/: error.rs  fmt.rs  lib.rs  parser.rs  pattern_compiler.rs
aura-parse/tests/: ctfe_shape.rs  feature_gates.rs  macros_mvp.rs  syntax.rs
aura-pkg/: Cargo.toml
aura-pkg/src/: cache.rs  cli.rs  commands.rs  config.rs  lib.rs  lockfile.rs  main.rs  metadata.rs  registry.rs  resolver.rs  security.rs  signing.rs
aura-pkg/tests/: integration_final.rs  integration_tests.rs  lockfile_tests.rs  registry_tests.rs  resolver_tests.rs
aura-plugin-ai/: Cargo.toml
aura-plugin-ai/src/: lib.rs
aura-plugin-iot/: Cargo.toml
aura-plugin-iot/src/: lib.rs
aura-plugin-lumina/: Cargo.toml
aura-plugin-lumina/src/: lib.rs
aura-rt/: Cargo.toml
aura-rt-native/: Cargo.toml
aura-rt-native/src/: allocator.rs  lib.rs
aura-rt/include/: aura_rt.h
aura-rt/src/: lib.rs  runtime.c
aura-sdk/: Cargo.toml
aura-sdk/src/: lib.rs
aura-stdlib/: Cargo.toml
aura-stdlib/include/: aura_stdlib.h
aura-stdlib/src/: lib.rs  stdlib.c
aura-verify/: Cargo.toml  build.rs
aura-verify/src/: counterexample_mapper.rs  geometry.rs  lib.rs  linear_types.rs  proof_summary.rs  region_stdlib.rs  solver.rs  variable_traces.rs  verify.rs
aura-verify/tests/: linear_caps_z3.rs  stdlib_verified_subset_z3.rs
aura/src/: linker.rs  main.rs  manifest.rs  report.rs
aura/tests/: debug_protocol_smoke.rs  devvm_parity.rs  differential_harness.rs  differential_proptest.rs  differential_util.rs  ir_conformance.rs  ir_golden_fixtures.rs  translation_validation.rs
aura/tests/common/: differential_util.rs  mod.rs
aura/tests/corpus/: match_basic.aura  println_basic.aura  range_check_u32.aura
aura/tests/fixtures/ir/: alloc_capability.air  binary_add.air  bind_strand_const_u32.air  br.air  call_println.air  compute_kernel.air  condbr.air  phi_cfg.air  range_check_u32.air  return_value.air  unary_neg.air
dist-complete/: Install.bat  Install.ps1  README.md
dist-complete/config/: Cargo.toml
dist-complete/examples/: concurrent_queue.aura  tcp_echo_server.aura
dist-complete/sdk/: install.ps1
dist-release/: MANIFEST.json
dist-release/docs/: ALL_MARKDOWN_INDEX.md  SUMMARIES_OVERVIEW.md  (+10 more)
docs/: JANUARY-2026-STATUS.md  PHASE-1-FINAL-SUMMARY.md  PHASE-2-INTEGRATION-CHECKLIST.md  cookbook-lumina-ui.md  editions-and-feature-gates.md  lumina-media.md  lumina-ui.md  release-notes.md  v1.0-implementation-plan.md
editors/sentinel-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
editors/sentinel-app/src-tauri/capabilities/: main.json
editors/sentinel-app/src-tauri/src/: main.rs
examples/: concurrent_queue.aura  grid_image_audio.aura  tcp_echo_server.aura
test-app/: .gitignore  Package.toml
tests/: capability_enforcement_integration.rs  debugger_integration_tests.rs  integration_phase1_e2e.rs  linear_type_enforcement_integration.rs  pillar1_week1_integration.rs  pillar2_week2_integration.rs  pillar3_week3_integration.rs
tools/: onnxruntime_bridge.c  onnxruntime_bridge.h  raylib_bridge.c  raylib_bridge.h  run_examples.py
website/: package-lock.json  package.json
(+254 files in other folders)
