[workspace]
resolver = "2"
members = [
  "aura",
  "aura-sdk",
  "aura-interpret",
  "aura-nexus",
  "aura-plugin-iot",
  "aura-plugin-ai",
  "aura-plugin-lumina",
  "aura-pkg",
  "aura-ast",
  "aura-lex",
  "aura-parse",
  "aura-core", "aura-ir", "aura-backend-c", "aura-verify", "aura-backend-llvm", "aura-rt-native",
  "aura-rt",
  "aura-stdlib",
  "aura-ai-opt",
  "aura-bridge", "aura-lsp",
]

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
# Diagnostics
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

# Lexer
logos = "0.15"

# CLI (optional but handy)
clap = { version = "4.5", features = ["derive"] }

# Compiler parallelism (later stages)
rayon = "1.10"

# Async runtime (native runtime / compiler parallelism)
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"], default-features = false }

# Cross-compilation target model
target-lexicon = "0.13"

# NOTE: `inkwell` (LLVM) and `z3` are declared per-crate behind features,
# because they require system LLVM/Z3 to be installed for linking.

