[package]
name = "aura-backend-llvm"
edition.workspace = true
version.workspace = true

[dependencies]
aura-ast = { path = "../aura-ast" }
aura-ir = { path = "../aura-ir" }
miette = { workspace = true }
thiserror = { workspace = true }
target-lexicon = { workspace = true }

[features]
default = []
llvm = []
