[package]
name = "aura-interpret"
edition.workspace = true
version.workspace = true

[dependencies]
aura-ast = { path = "../aura-ast" }
aura-parse = { path = "../aura-parse" }
aura-core = { path = "../aura-core" }
aura-verify = { path = "../aura-verify", default-features = false, features = ["z3"] }
aura-nexus = { path = "../aura-nexus", default-features = false }
aura-plugin-iot = { path = "../aura-plugin-iot", default-features = false, features = ["z3"] }
aura-plugin-ai = { path = "../aura-plugin-ai", default-features = false, features = ["z3"] }

miette = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio MVP for AVM demos (Windows/macOS/Linux via cpal backends).
rodio = "0.20"
