[package]
name = "aura-lsp"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-std"] }
tower-lsp = "0.20"

aura-parse = { path = "../aura-parse" }
aura-ast = { path = "../aura-ast" }
aura-lex = { path = "../aura-lex" }
aura-core = { path = "../aura-core" }
aura-verify = { path = "../aura-verify", default-features = false, features = ["z3"] }
aura-nexus = { path = "../aura-nexus", default-features = false }
aura-plugin-iot = { path = "../aura-plugin-iot", default-features = false, features = ["z3"] }
aura-plugin-ai = { path = "../aura-plugin-ai", default-features = false, features = ["z3"] }
aura-sdk = { path = "../aura-sdk" }

miette = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
[[bin]]
name = "aura-ci-gate"
path = "src/bin/aura-ci-gate.rs"

[[bin]]
name = "differential-test-runner"
path = "src/bin/differential-test-runner.rs"