[package]
name = "aura-pkg"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
zip = "2.2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
semver = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.10"
