[package]
name = "aura-plugin-iot"
edition.workspace = true
version.workspace = true

[dependencies]
aura-ast = { path = "../aura-ast" }
aura-nexus = { path = "../aura-nexus", default-features = false }
miette = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
toml = "0.8"
z3 = { version = "0.12", optional = true }

[features]
default = []
z3 = ["aura-nexus/z3", "dep:z3"]
