[package]
name = "aura"
version = "0.1.0"
edition = "2024"

[dependencies]
aura-ast = { path = "../aura-ast" }
aura-ir = { path = "../aura-ir" }
aura-sdk = { path = "../aura-sdk" }
aura-parse = { path = "../aura-parse" }
aura-core = { path = "../aura-core" }
aura-backend-c = { path = "../aura-backend-c" }
aura-verify = { path = "../aura-verify", default-features = false }
aura-backend-llvm = { path = "../aura-backend-llvm", default-features = false }
aura-rt = { path = "../aura-rt" }
aura-stdlib = { path = "../aura-stdlib" }
aura-ai-opt = { path = "../aura-ai-opt" }
aura-bridge = { path = "../aura-bridge" }
aura-pkg = { path = "../aura-pkg" }
aura-interpret = { path = "../aura-interpret" }
aura-nexus = { path = "../aura-nexus" }
aura-plugin-lumina = { path = "../aura-plugin-lumina" }
aura-plugin-iot = { path = "../aura-plugin-iot", default-features = false, optional = true }
aura-plugin-ai = { path = "../aura-plugin-ai", default-features = false, optional = true }
miette = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = "1.6"

[features]
default = []
# Enable Z3-based verification in `aura-verify`
z3 = [
	"aura-verify/z3",
	"aura-nexus/z3",
	"aura-plugin-iot",
	"aura-plugin-iot/z3",
	"aura-plugin-ai",
	"aura-plugin-ai/z3",
]
# Enable LLVM codegen via inkwell in `aura-backend-llvm`
llvm = ["aura-backend-llvm/llvm"]

# Enable Raylib-backed pixel rendering in the Lumina plugin.
lumina-raylib = ["aura-plugin-lumina/raylib"]

